# diploma-deepfake-detection

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  main.py  main2.py  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
configs/: debug.yaml  experiment.yaml
deepfake_recognition/: __init__.py  helpers.py  models.py
docs/histograms/: HISTOGRAM_MATRIX_README.md
docs/preprocessing/: README.md
scripts/: check-formatting.sh  check-linting.sh  check-static-types.sh  clean-pycache.sh  format-src-files.sh  organize-src-imports.sh  run-all-checks.sh  update-requirements-txt-file.sh
scripts/testing/: test_histogram_matrix.py
src/: config.py
src/preprocessing/: detection.py  histograms.py  normalization.py
src/schemas/: custom_types.py  features.py  types.py
src/schemas/enums/: config_paths.py
src/utils/: math.py
