[project]
name = "deepfake-recognition"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dlib>=20.0.0",
    "facenet-pytorch>=2.5.3",
    "opencv-python>=4.12.0.88",
    "pydantic>=2.11.7",
    "torchvision>=0.23.0",
]
