[project]
name = "deepfake-recognition"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "facenet-pytorch>=2.5.3",
    "opencv-python>=4.12.0.88",
    "pydantic>=2.11.7",
    "pyyaml>=6.0.2",
    "torchvision>=0.23.0",
]

[tool.uv]
dev-dependencies = [
    "ruff",
    "black",
    "mypy",
    "pre-commit",
]

[tool.ruff]
line-length = 88
select = ["E", "F", "I"]  # Errors, flake8, isort
ignore = ["E501"]         # Example: ignore long line warning

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
disallow_untyped_defs = true
strict = true
ignore_missing_imports = true
